Overlapping about NMIMS corrected

--- a/src/components/aboutNMIMS/aboutNMIMS.scss
+++ b/src/components/aboutNMIMS/aboutNMIMS.scss
@@ -16,20 +16,18 @@
             font-size: $defaultRegularFontSize;
         }
         @media only screen and (max-width: 1000px) and (orientation: portrait) {
-        height: 60vh;
-        p{
-
-            font-size: 5vw;
+            height: 60vh;
+            p {
+                font-size: 5vw;
+            }
+            // align-items: stretch;
         }
-        // align-items: stretch;
-    }
     }
 
-    height: 60vh;
+    height: 100vh;
     @media only screen and (max-width: 1000px) and (orientation: portrait) {
         height: 100vh;
-        p{
-
+        p {
             font-size: 15vw;
         }
         // align-items: stretch;
@@ -63,6 +61,6 @@
         font-weight: 600;
     }
 }
-*{
+* {
     // border: 2px solid red;
 }
